Update to release 2.3
Taken from the distributed package file from:
http://robotcloud.screenstepslive.com/s/2459/m/5322/l/94467-bender-automated-backup-of-os-x-server-settings

--- a/Resources/net.robotcloud.bender.plist
+++ b/Resources/net.robotcloud.bender.plist
@@ -6,7 +6,7 @@
 	<string>net.robotcloud.bender</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Library/Application Support/RobotCloud/Binaries/bender</string>
+		<string>/usr/local/robotcloud/bin/bender</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
